# backend-

./: .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  dump.rdb  dumphello.sql  pyproject.toml  requirements.txt
.github/workflows/: build.yml  pr.yml
env/: pyvenv.cfg
erp/: conftest.py  manage.py
erp/achats/: admin.py  models.py  serializers.py  views.py
erp/achats/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
erp/archivage/: apps.py  models.py  serializers.py  urls.py  views.py
erp/archivage/migrations/: 0001_initial.py  0002_archivagefacture_archivageproduitsenfacture.py
erp/clientInfo/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
erp/clientInfo/migrations/: 0001_initial.py  0002_compteentreprise_agence_compteentreprise_banque.py  0002_initial.py  0003_remove_store_address1_remove_store_address2_and_more.py  0004_store_address1_store_address2_store_address3.py  0005_store_articleimpo.py  0006_store_banque.py  0007_store_capitalesocial.py  0008_store_code.py  0009_store_comptebancaire.py  0010_store_compteccp.py  0011_store_denomination.py  0012_store_fax1_store_fax2_store_fax3.py  0013_store_identifiantstatistique.py  0014_store_mobile1_store_mobile2_store_mobile3.py  0015_store_monnaie.py  0016_store_nadherent.py  0017_store_phone1_store_phone2_store_phone3.py  0018_store_raisonsocial.py  0019_store_registrecom.py  0020_store_name.py  0021_store_product_variant.py
erp/clientinfo/: models.py
erp/comptoire/: admin.py  filters.py  models.py  serializers.py  views.py
erp/comptoire/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
erp/core/: asgi.py  celery.py  filters.py  pagination.py  permission.py  urls.py  wsgi.py
erp/core/api/: views.py
erp/core/settings/: __init__.py  base.py  celery.py  docker.py  envvars.py  logging.py  rest_framework.py
erp/gestionRH/: filters.py  models.py  serializers.py  views.py
erp/inventory/: admin.py  filters.py  models.py  serializers.py  views.py
erp/logistique/: models.py  serializers.py  urls.py  views.py
erp/production/: models.py  serializers.py  urls.py  views.py
erp/produits/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
erp/reglements/: admin.py  models.py  views.py
erp/tiers/: filters.py  models.py  serializers.py  views.py
erp/user/: admin.py  models.py  serializers.py  urls.py  views.py
erp/ventes/: filters.py  models.py  serializers.py  urls.py  views.py
erpdivatech/: db.sqlite3
erpdivatech/erpdivatech/: settings.py  urls.py
erpdivatech/user/: models.py
erpdivatech/ventes/: models.py
scripts/: entrypoint.sh
venv-3/: pyvenv.cfg
(+155 files in other folders)
