[tool.poetry]
name = "backend-"
version = "0.1.0"
description = ""
authors = ["Ahlemmer <ahlemmerabtene@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-filter = "^24.3"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
